# pwrmenu

./: Cargo.toml  Makefile  README.md  build.rs  install.sh
src/: config.rs  main.rs  reboot.c  theme.rs
