[package]
name = "pwrmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.92"

[dependencies]
gtk4 = "0.9.2"
cairo-rs = "0.20.1"
gio = "0.20.4"
glib = "0.20.4"
pango = "0.20.4"
gdk = {version = "0.1", package = "gdk4"}
gsk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gsk4" }
gdk-wayland = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gdk4-wayland" }
gtk4-layer-shell = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
